--- a/Page-1/Ma_page_1.css
+++ b/Page-1/Ma_page_1.css
@@ -47,16 +47,11 @@ main {
 .menu h3 {
   color: white;
   border-radius: 25px 25px 25px 25px;
-  background-color: #0065fc;
-  border: 1px solid #0065fc;
+  background-color: #486aa8;
+  border: 1px solid #486aa8;
   padding: 1rem;
-  width: 25%;
+  width: 16%;
   margin: auto;
-}
-.menu h3 :hover {
-  cursor: pointer;
-  transform: scale(1.02);
-  box-shadow: 0px 5px 4px #3e83eb;
 }
 
 .Fonctionnement_barre {
@@ -91,7 +86,7 @@ main {
   margin-left: -1.8rem;
 }
 .Fonctionnement_barre .lignes .ligne_trois {
-  background-color: rgb(118, 172, 233);
+  background-color: rgb(164, 194, 228);
   border-radius: 20px 20px 20px 20px;
   box-shadow: 0px 5px 4px rgb(90, 165, 235);
   padding: 1rem;
@@ -131,6 +126,7 @@ main {
 }
 .restaurant_menu .restaurants .restaurant_un img {
   width: 100%;
+  height: auto;
   border-radius: 25px 25px 0px 0px;
 }
 .restaurant_menu .restaurants .restaurant_un figcaption {
@@ -143,11 +139,12 @@ main {
   display: flex;
   align-items: baseline;
   margin-top: -2rem;
+  gap: 5rem;
 }
 .restaurant_menu .restaurants .restaurant_un figcaption .Folie-Méricourt i:hover {
   cursor: pointer;
-  transform: scale(1);
-  color: #ce800c;
+  transform: scale(1.15);
+  background-image: #2365df;
 }
 
 .image3 {
@@ -173,7 +170,7 @@ footer h2 {
 
 /* responsive avec media query */
 /* Media query pour android avec max width de 850 */
-@media (min-width: 851px) and (max-width: 1000px) {
+@media all and (min-width: 851px) and (max-width: 1000px) {
   main {
     width: auto;
   }
@@ -264,6 +261,9 @@ footer h2 {
   main .menu {
     padding: 1rem;
   }
+  main .menu h3 {
+    width: 13rem;
+  }
   main .Fonctionnement_barre {
     padding: 1rem;
   }
@@ -285,53 +285,64 @@ footer h2 {
     height: auto;
   }
   main figcaption {
-    font-size: 1.5rem;
-    padding-left: 2rem;
+    font-size: 1.2rem;
   }
-  main figcaption p {
-    padding-right: 8rem;
+  main figcaption .Folie-Méricourt p {
+    margin-right: -1rem;
   }
 }
 /* Media query pour android avec max width de 375 */
 @media (max-width: 375px) {
+  header h1 {
+    width: 100%;
+  }
   main {
     width: 100%;
   }
   main .navigation {
-    width: auto;
+    width: 100%;
     height: 5rem;
   }
-  main .menu {
-    padding: 2rem;
-  }
-  main .menu h3 {
-    width: auto;
-  }
-  main .Fonctionnement_barre {
+  .menu {
     padding: 1rem;
   }
-  main .Fonctionnement_barre .lignes {
+  .menu h3 {
+    width: 12.5rem;
+  }
+  .menu h1 {
+    font-size: 1.2rem;
+  }
+  .Fonctionnement_barre {
+    padding: 1.2rem;
+  }
+  .Fonctionnement_barre .lignes {
     display: block;
   }
-  main .Fonctionnement_barre .lignes .ligne_une, main .Fonctionnement_barre .lignes .ligne_deux, main .Fonctionnement_barre .lignes .ligne_trois {
+  .ligne_une, .ligne_deux, .ligne_trois {
     margin-top: 1rem;
   }
-  main .restaurant_menu {
-    padding: 1rem;
+  .restaurant_menu {
+    padding: 0.7rem;
   }
-  main .restaurant_menu .restaurants {
-    display: grid;
-    grid-template-columns: 1fr;
+  .restaurant_menu .restaurants {
+    display: block;
   }
-  main .restaurant_menu .restaurants img {
-    width: 100%;
+  .restaurant_menu .restaurants img {
     height: auto;
   }
-  main figcaption {
-    font-size: 1.5rem;
-    padding-left: 2rem;
+  .restaurant_menu .restaurants figcaption {
+    font-size: 1rem;
   }
-  main figcaption p {
-    padding-right: 3rem;
+  .restaurant_menu .restaurant_un {
+    margin-top: 1.2rem;
   }
-}/*# sourceMappingURL=Ma_page_1.css.map */
+  .restaurant_menu .restaurant_un p {
+    font-size: small;
+    align-items: center;
+  }
+  footer {
+    margin-top: 3rem;
+  }
+}
+
+/*# sourceMappingURL=Ma_page_1.css.map */
