--- a/Page-2/Ma_page_2.css
+++ b/Page-2/Ma_page_2.css
@@ -4,8 +4,8 @@
 body {
   margin: 0;
 }
-/* fin de body avec css */
 
+/* fin de body avec css */
 /* realisatiopn du header avec css */
 header {
   font-family: "shrikhand", cursive;
@@ -17,8 +17,8 @@ header {
   box-shadow: 0px 3px 2px grey;
   padding: 0.01rem;
 }
-/* fin de header */
 
+/* fin de header */
 /* css pour la partie main */
 main {
   font-family: Arial, Helvetica, sans-serif;
@@ -30,39 +30,85 @@ main img {
   height: 400px;
 }
 main h1 {
+  background-color: white;
+  border-radius: 40px 40px 0px 0px;
+  margin-top: -3.2rem;
+  padding-top: 4rem;
+  position: sticky;
   font-size: 3rem;
   font-family: "shrikhand", cursive;
   text-align: center;
 }
-/* fin de la partie main */
 
+/* fin de la partie main */
 /* css pour la partie regroupant ENTREES/PLATS/DESSERTS */
 .entree_plats_dessert {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 2rem;
 }
+
 h4 {
   text-decoration: underline;
   text-decoration-skip: edge;
 }
+
 .ENTREES {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 2rem;
 }
-.ENTREES .ENTREES_Menu {
+.ENTREES .menu {
   background-color: rgb(248, 248, 248);
   border-radius: 20px 20px 20px 20px;
   box-shadow: 0px 5px 4px rgb(214, 203, 203);
-  padding: 1rem;
+  display: flex;
+  overflow: hidden;
+  height: 5rem;
 }
-.ENTREES .ENTREES_Menu .ENTREES_prix {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
+.ENTREES .menu .phrases {
+  margin: 0;
+  padding: 10px;
 }
-/* fin de la partie regroupante */
+.ENTREES .menu .prix {
+  margin-left: auto;
+  display: flex;
+  align-items: flex-end;
+  font-weight: bold;
+  margin-right: 15px;
+}
+.ENTREES .menu .animation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #99e2d0;
+  margin-right: -3.5rem;
+  width: 3.5rem;
+  transition-duration: 500ms;
+  height: 100%;
+}
+.ENTREES .menu .animation .animation_icone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1.3rem;
+  width: 1.3rem;
+  background-color: white;
+  transform: rotate(360deg);
+  transition-duration: 500ms;
+  border-radius: 100%;
+}
+.ENTREES .menu .animation .animation_icone .menu_icon {
+  color: #99e2d0;
+}
+.ENTREES .menu:hover .animation {
+  margin-right: 0;
+}
+.ENTREES .menu :hover .animation_icone {
+  transform: rotate(0);
+}
 
+/* fin de la partie regroupante */
 /* realisation avec css de la partie commande */
 .commande h3 {
   text-align: center;
@@ -79,8 +125,8 @@ h4 {
   transform: scale(1);
   background-color: rgb(79, 79, 177);
 }
-/* fin de la partie commande */
 
+/* fin de la partie commande */
 /* realisation avec css du footer(pied de la page) */
 footer {
   display: grid;
@@ -98,61 +144,8 @@ footer h2 {
   font-family: "shrikhand", cursive;
   padding-left: 2rem;
 }
+
 /* finition du footer */
-
-/* Media query pour android avec max width de 640 */
-@media (max-width: 640px) {
-  header h1 {
-    padding: 0;
-    position: sticky;
-    top: 0;
-  }
-  main {
-    width: 100%;
-    margin-bottom: -5rem;
-  }
-  main img {
-    width: 100%;
-    height: 200px;
-  }
-  main h1 {
-    font-size: 1.5rem;
-  }
-  .myfood h4 {
-    padding-left: 1.5rem;
-  }
-  .myfood .ENTREES {
-    display: block;
-  }
-  .entree_plats_dessert {
-    display: block;
-    margin: 0.6rem;
-  }
-  .ENTREES_Menu {
-    background-color: rgb(231, 225, 217);
-    padding: 1rem;
-    padding-bottom: 0;
-    margin-top: 0.6rem;
-    box-shadow: none;
-    border-radius: 10px 0px 10px 0px;
-  }
-  .commande h3 {
-    padding-right: 3rem;
-    margin-top: 2rem;
-  }
-  .commande h3 :hover {
-    cursor: pointer;
-    transform: scale(1);
-    background-color: rgb(79, 79, 177);
-  }
-  footer {
-    height: 9rem;
-  }
-  footer .foot, footer h2 {
-    font-size: small;
-  }
-}
-
 /* Media query pour android avec max width de 840 */
 @media (max-width: 840px) {
   header h1 {
@@ -181,9 +174,8 @@ footer h2 {
     display: block;
     margin: 0.6rem;
   }
-  .ENTREES_Menu {
+  .menu {
     background-color: rgb(231, 225, 217);
-    padding: 1rem;
     padding-bottom: 0;
     margin-top: 0.6rem;
     box-shadow: none;
@@ -205,3 +197,66 @@ footer h2 {
     font-size: small;
   }
 }
+/* Media query pour android avec max width de 640 */
+@media (max-width: 640px) {
+  header h1 {
+    padding: 0;
+    position: sticky;
+    top: 0;
+  }
+  main {
+    width: 100%;
+    margin-bottom: -5rem;
+  }
+  main img {
+    width: 100%;
+    height: 200px;
+  }
+  main h1 {
+    font-size: 1.5rem;
+  }
+  .myfood h4 {
+    padding-left: 1.5rem;
+  }
+  .myfood .ENTREES {
+    display: block;
+  }
+  .entree_plats_dessert {
+    display: block;
+    margin: 0.6rem;
+  }
+  .menu {
+    background-color: rgb(231, 225, 217);
+    box-shadow: none;
+    border-radius: 10px 0px 10px 0px;
+  }
+  .menu .phrases {
+    margin: 0;
+    padding: 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  .menu .phrases p {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  .commande h3 {
+    padding-right: 3rem;
+    margin-top: 2rem;
+  }
+  .commande h3 :hover {
+    cursor: pointer;
+    transform: scale(1);
+    background-color: rgb(79, 79, 177);
+  }
+  footer {
+    height: 9rem;
+  }
+  footer .foot, footer h2 {
+    font-size: small;
+  }
+}
+
+/*# sourceMappingURL=Ma_page_2.css.map */
