--- a/Page-5/Ma_page_5.css
+++ b/Page-5/Ma_page_5.css
@@ -18,11 +18,6 @@ header {
   padding: 0.01rem;
 }
 
-h4 {
-  text-decoration: underline;
-  text-decoration-skip: edge;
-}
-
 /* fin de header */
 /* css pour la partie main */
 main {
@@ -35,6 +30,10 @@ main img {
   height: 400px;
 }
 main h1 {
+  background-color: white;
+  border-radius: 40px 40px 0px 0px;
+  margin-top: -3.2rem;
+  padding-top: 4rem;
   font-size: 3rem;
   font-family: "shrikhand", cursive;
   text-align: center;
@@ -48,20 +47,64 @@ main h1 {
   gap: 2rem;
 }
 
+h4 {
+  text-decoration: underline;
+  text-decoration-skip: edge;
+}
+
 .ENTREES {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 2rem;
 }
-.ENTREES .ENTREES_Menu {
+.ENTREES .menu {
   background-color: rgb(248, 248, 248);
   border-radius: 20px 20px 20px 20px;
   box-shadow: 0px 5px 4px rgb(214, 203, 203);
-  padding: 1rem;
+  display: flex;
+  overflow: hidden;
+  height: 5rem;
 }
-.ENTREES .ENTREES_Menu .ENTREES_prix {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
+.ENTREES .menu .phrases {
+  margin: 0;
+  padding: 10px;
+}
+.ENTREES .menu .prix {
+  margin-left: auto;
+  display: flex;
+  align-items: flex-end;
+  font-weight: bold;
+  margin-right: 15px;
+}
+.ENTREES .menu .animation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #99e2d0;
+  margin-right: -3.5rem;
+  width: 3.5rem;
+  transition-duration: 500ms;
+  height: 100%;
+}
+.ENTREES .menu .animation .animation_icone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1.3rem;
+  width: 1.3rem;
+  background-color: white;
+  transform: rotate(360deg);
+  transition-duration: 500ms;
+  border-radius: 100%;
+}
+.ENTREES .menu .animation .animation_icone .menu_icon {
+  color: #99e2d0;
+}
+.ENTREES .menu:hover .animation {
+  margin-right: 0;
+}
+.ENTREES .menu :hover .animation_icone {
+  transform: rotate(0);
 }
 
 /* fin de la partie regroupante */
@@ -130,9 +173,8 @@ footer h2 {
     display: block;
     margin: 0.6rem;
   }
-  .ENTREES_Menu {
+  .menu {
     background-color: rgb(231, 225, 217);
-    padding: 1rem;
     padding-bottom: 0;
     margin-top: 0.6rem;
     box-shadow: none;
@@ -182,13 +224,22 @@ footer h2 {
     display: block;
     margin: 0.6rem;
   }
-  .ENTREES_Menu {
+  .menu {
     background-color: rgb(231, 225, 217);
-    padding: 1rem;
-    padding-bottom: 0;
-    margin-top: 0.6rem;
     box-shadow: none;
     border-radius: 10px 0px 10px 0px;
+  }
+  .menu .phrases {
+    margin: 0;
+    padding: 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  .menu .phrases p {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
   .commande h3 {
     padding-right: 3rem;
