--- a/Page-5/Ma_page_5.scss
+++ b/Page-5/Ma_page_5.scss
@@ -19,10 +19,6 @@ header{
     box-shadow: 0px 3px 2px grey;
     padding: 0.01rem;
 }
-h4{
-  text-decoration: underline;
-  text-decoration-skip: edge;
-}
 /* fin de header */
 
 /* css pour la partie main */
@@ -35,11 +31,15 @@ main{
         height: 400px;
     }
     h1 {
+        background-color: white;
+        border-radius: 40px 40px 0px 0px;
+        margin-top: -3.2rem;
+        padding-top: 4rem;
         font-size: 3rem;
         font-family: "shrikhand", cursive;
         text-align: center;
     }
-} 
+}
 /* fin de la partie main */
 
 /* css pour la partie regroupant ENTREES/PLATS/DESSERTS */
@@ -48,39 +48,80 @@ main{
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
 }
+h4{
+    text-decoration: underline;
+    text-decoration-skip: edge;
+  }   
 .ENTREES{
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 2rem;
-    .ENTREES_Menu{
+    .menu{
         background-color: rgb(248, 248, 248);
         border-radius: 20px 20px 20px 20px;
         box-shadow: 0px 5px 4px rgb(214, 203, 203);
-        padding: 1rem;
-        .ENTREES_prix{
-            display: grid;
-            grid-template-columns: 3fr 1fr;
+        display: flex;
+        overflow: hidden;
+        height: 5rem;
+        .phrases{
+            margin: 0;
+            padding: 10px;
+        }
+        .prix{
+            margin-left: auto;
+            display: flex;
+            align-items: flex-end;
+            font-weight: bold;
+            margin-right: 15px;
+        }
+        .animation{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #99e2d0;
+            margin-right: -3.5rem;
+            width: 3.5rem;
+            transition-duration: 500ms;
+            height: 100%;
+            .animation_icone{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 1.3rem;
+                width: 1.3rem;
+                background-color: white;
+                transform: rotate(360deg);
+                transition-duration: 500ms;
+                border-radius: 100%;
+                .menu_icon{
+                    color: #99e2d0;
+                }
+            }
+        }
+       &:hover .animation{
+            margin-right: 0;
+        }
+        :hover .animation_icone{
+            transform: rotate(0);
         }
     }
 }
 /* fin de la partie regroupante */
 
 /* realisation avec css de la partie commande */
-.commande {
-    h3{
-        text-align: center;
-        color: white;
-        border-radius: 25px 25px 25px 25px;
-        background-color: #68a0f5;
-        padding: 1rem;
-        width: 25%;
-        margin: auto;
-        margin-top: 4rem;
-        :hover{
-            cursor: pointer;
-            transform: scale(1);
-            background-color: rgb(79, 79, 177);
-        }
+.commande h3{
+    text-align: center;
+    color: white;
+    border-radius: 25px 25px 25px 25px;
+    background-color: #68a0f5;
+    padding: 1rem;
+    width: 25%;
+    margin: auto;
+    margin-top: 4rem;
+    :hover{
+        cursor: pointer;
+        transform: scale(1);
+        background-color: rgb(79, 79, 177);
     }
 }
 /* fin de la partie commande */
@@ -134,9 +175,8 @@ footer {
         display: block;
         margin: 0.6rem;
     }
-    .ENTREES_Menu{
+    .menu{
         background-color: rgb(231, 225, 217);
-        padding: 1rem;
         padding-bottom: 0;
         margin-top: 0.6rem;
         box-shadow: none;
@@ -189,13 +229,22 @@ footer {
         display: block;
         margin: 0.6rem;
     }
-    .ENTREES_Menu{
+    .menu{
         background-color: rgb(231, 225, 217);
-        padding: 1rem;
-        padding-bottom: 0;
-        margin-top: 0.6rem;
         box-shadow: none;
         border-radius: 10px 0px 10px 0px;
+        .phrases{
+            margin: 0;
+            padding: 10px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            p{
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            }
+        }
     }
     .commande h3{
         padding-right: 3rem;
